--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{cui2023complex,
+ author = {Cui, Andrea Yaoyun and Lleras, Alejandro and Ng, Gavin Jun Peng and Buetti, Simona},
+ journal = {Journal of Experimental Psychology: Human Perception and Performance},
+ number = {7},
+ pages = {1053},
+ publisher = {American Psychological Association},
+ title = {Complex background information slows down parallel search efficiency by reducing the strength of interitem interactions.},
+ volume = {49},
+ year = {2023}
 }
